--- a/package.json
+++ b/package.json
@@ -5,15 +5,26 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "iphone13": "npx react-native run-ios --simulator=\"iPhone 13 Pro\"",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
     "@react-native-picker/picker": "^2.4.4",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
+    "@react-navigation/stack": "^6.2.3",
+    "formik": "^2.2.9",
     "react": "18.1.0",
     "react-native": "0.70.1",
-    "react-native-picker-select": "^8.0.4"
+    "react-native-picker-select": "^8.0.4",
+    "react-native-safe-area-context": "^4.3.4",
+    "react-native-screens": "^3.17.0",
+    "react-native-snackbar": "^2.4.0",
+    "react-redux": "^8.0.4",
+    "redux": "^4.2.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
