--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.2.9",
     "react": "18.1.0",
     "react-native": "0.70.1",
+    "react-native-maps": "^1.3.1",
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
