--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
     "react-native-snackbar": "^2.4.0",
+    "react-native-webview": "^11.23.1",
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
     "yup": "^0.32.11"
